--- a/neo_backtest_prototype.ipynb
+++ b/neo_backtest_prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "companies, fs_df, fr_df, iv_df, prices = load_all_data_for_backtest()"
+    "prices = get_price_data_for_backtest()"
    ]
   },
   {
@@ -82,10 +82,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fs_df = make_total_fs_df()\n",
+    "fr_df = make_total_fr_df()\n",
+    "iv_df = make_total_iv_df()\n",
+    "companies = get_company_data()\n",
+    "companies, fs_df, fr_df, iv_df, prices = get_normalize_data(companies, fs_df, fr_df, iv_df, prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(fs_df))\n",
+    "print(len(fr_df))\n",
+    "print(len(iv_df))\n",
+    "print(len(companies))\n",
+    "print(len(prices.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "companies = get_company_df_from_total_capital(companies, 0.6, start_date)\n",
     "fs_df = fs_df.loc[companies.index]\n",
     "fr_df = fr_df.loc[companies.index]\n",
     "iv_df = iv_df.loc[companies.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(len(fs_df))\n",
+    "print(len(fr_df))\n",
+    "print(len(iv_df))\n",
+    "print(len(companies))\n",
+    "print(len(prices.columns))"
    ]
   },
   {
@@ -96,44 +139,6 @@
    "source": [
     "ebit_df = make_account_df('EV_EBIT', '재무비율')\n",
     "ebit_df = ebit_df.loc[companies.index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_low_ev_ebit_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_high_gpa_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "bt4 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "bt5 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n",
-    "# max_profit = 0.5\n",
-    "# max_holding_days=365*2\n",
-    "# total_pf_df = get_portfolio_backtest_df(get_high_roa_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
-    "# bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
-    "\n"
    ]
   },
   {
@@ -167,13 +172,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "max_profit = 0.5\n",
+    "max_holding_days=365\n",
+    "total_pf_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n",
+    "max_profit = 0.5\n",
+    "max_holding_days=365\n",
+    "total_pf_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.rc('font', size=10)\n",
     "plt.figure(figsize=(20, 12))\n",
     "plt.plot(bt1.index, bt1['total_change_rate'], label='bt1')\n",
     "plt.plot(bt2.index, bt2['total_change_rate'], label='bt2')\n",
     "plt.plot(bt3.index, bt3['total_change_rate'], label='bt3')\n",
-    "plt.plot(bt4.index, bt4['total_change_rate'], label='bt4')\n",
-    "plt.plot(bt5.index, bt5['total_change_rate'], label='bt5')\n",
     "plt.plot(my.index, my['total_change_rate'], label='my portfolio')\n",
     "# plt.plot(samsung.index, samsung['total_change_rate'], label='samsung')\n",
     "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=0.5, linestyle='dashed')\n",
