--- a/neo_backtest_prototype.ipynb
+++ b/neo_backtest_prototype.ipynb
@@ -174,17 +174,20 @@
    "source": [
     "max_profit = 0.5\n",
     "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "maximum_rebuy_interval_days = 1\n",
+    "total_pf_df, cache_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
     "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "max_profit = 0.5\n",
     "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "maximum_rebuy_interval_days = 1\n",
+    "total_pf_df, cache_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
     "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
     "max_profit = 0.5\n",
     "max_holding_days=365\n",
-    "total_pf_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days)\n",
+    "maximum_rebuy_interval_days = 1\n",
+    "total_pf_df, cache_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
     "bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n"
    ]
