--- a/neo_my_portfolio_quant.ipynb
+++ b/neo_my_portfolio_quant.ipynb
@@ -1859,6 +1859,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load py_neo_quant_portfolio.py\n",
+    "# %load py_neo_quant_backtest.py\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "# import requests\n",
+    "# import bs4\n",
+    "# import time\n",
+    "# import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "# from dateutil import parser\n",
+    "from matplotlib import font_manager, rc\n",
+    "# from IPython.display import HTML\n",
+    "# pd.set_option('display.max_colwidth', -1)\n",
+    "\n",
+    "rc('font', family='AppleGothic')\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "# pd.options.display.max_rows = 60\n",
+    "# pd.set_option('display.max_columns', 500)\n",
+    "# pd.set_option('display.width', 1000)\n",
+    "%matplotlib inline\n",
+    "\n",
+    "########################## API ################################\n",
+    "\n",
+    "def get_portfolio_file_name():\n",
+    "    return r'data/my_portfolio.xlsx'\n",
+    "\n",
+    "def get_price_file_name():\n",
+    "    return r'data/my_portfolio_price.xlsx'\n",
+    "\n",
+    "def save_price_data(price_df):\n",
+    "    price_df.to_excel(get_price_file_name())  \n",
+    "\n",
+    "def load_price_data():\n",
+    "    price_df = pd.read_excel(get_price_file_name())\n",
+    "    return price_df\n",
+    "\n",
+    "\n",
+    "def make_my_portfolio(pf_stock_num, start_date, price_df):\n",
+    "    strategy_price = price_df[my_portfolio_code_list][start_date:]\n",
+    "\n",
+    "    pf_df = pd.DataFrame(pf_stock_num, index=[strategy_price.iloc[0].name])\n",
+    "    pf_df['cash'] = 0\n",
+    "    \n",
+    "    return pf_df\n",
+    "\n",
+    "def save_my_portfolio(pf_df):\n",
+    "    pf_df.to_excel(get_portfolio_file_name())  \n",
+    "\n",
+    "def load_my_portfolio():\n",
+    "    total_pf_df = pd.read_excel(get_portfolio_file_name())\n",
+    "    total_pf_df = total_pf_df.set_index(total_pf_df.columns[0])\n",
+    "    total_pf_df.index.name = ''\n",
+    "    \n",
+    "#     cache_df = pd.DataFrame({'buy_date':start_date}, index=total_pf_df.columns[:-1])\n",
+    "#     for code in cache_df.index:\n",
+    "#         last_buy_date = get_last_buy_date(total_pf_df, code)\n",
+    "#         cache_df.at[code, 'buy_date'] = last_buy_date\n",
+    "    \n",
+    "    return total_pf_df\n",
+    "\n",
+    "def test_date_overlap(origin_price_df, firm_list, count):\n",
+    "    origin_final_date = origin_price_df.iloc[-1].name\n",
+    "    test_firm_code = firm_list[0]\n",
+    "    test_price_df = make_price_dataframe(test_firm_code, 'day', count)\n",
+    "    test_price_df.index = pd.to_datetime(test_price_df.index)\n",
+    "    test_first_date = test_price_df.iloc[0].name\n",
+    "    if origin_final_date >= test_first_date:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def update_portfolio_price_df(total_pf_df, total_price_df, count):\n",
+    "    start_date = total_pf_df.iloc[0].name\n",
+    "    firm_list = total_pf_df.columns[:-1]\n",
+    "    if file_exists(get_price_file_name()):\n",
+    "        print('exists')\n",
+    "        origin_price_df = load_price_data()\n",
+    "        origin_price_df = origin_price_df.set_index(origin_price_df.columns[0])\n",
+    "        origin_price_df.index.name = ''\n",
+    "    else:\n",
+    "        print('not exists')\n",
+    "        origin_price_df = total_price_df[firm_list][start_date:]\n",
+    "        origin_price_df.index.name = ''\n",
+    "# save_price_data(origin_price_df)\n",
+    "    if not test_date_overlap(origin_price_df, firm_list, count):\n",
+    "        print('>>>>>>> date not overlap, add more count')\n",
+    "        return origin_price_df\n",
+    "    \n",
+    "    exist_firm_list = []\n",
+    "    not_exist_firm_list = []\n",
+    "    for firm_code in firm_list:\n",
+    "        if firm_code in origin_price_df.columns:\n",
+    "            exist_firm_list.append(firm_code)\n",
+    "        else:\n",
+    "            not_exist_firm_list.append(firm_code)\n",
+    "\n",
+    "    update_price_df = update_prices(exist_firm_list, origin_price_df, count)  \n",
+    "    for firm_code in not_exist_firm_list:\n",
+    "        temp_price_df = make_price_dataframe(firm_code, 'day', count)\n",
+    "        temp_price_df.index = pd.to_datetime(temp_price_df.index)\n",
+    "        temp_price_df[firm_code] = temp_price_df[firm_code].astype(float)\n",
+    "        update_price_df = pd.concat([update_price_df, temp_price_df], axis=1)\n",
+    "        update_price_df = update_price_df.fillna(method='bfill')\n",
+    "    return update_price_df\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -2413,147 +2533,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# total_pf_df.to_excel(r'data/my_portfolio_2019_11_7.xlsx') "
+    "def get_portfolio_file_name():\n",
+    "    return r'data/my_portfolio_quant.xlsx'\n",
+    "\n",
+    "def get_price_file_name():\n",
+    "    return r'data/my_portfolio_price_quant.xlsx'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_pf_df2 = pd.read_excel(r'data/my_portfolio_2019_11_7.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A069640</th>\n",
-       "      <th>A030200</th>\n",
-       "      <th>A058850</th>\n",
-       "      <th>A037560</th>\n",
-       "      <th>A900300</th>\n",
-       "      <th>A005800</th>\n",
-       "      <th>A005390</th>\n",
-       "      <th>A093050</th>\n",
-       "      <th>A005990</th>\n",
-       "      <th>A095570</th>\n",
-       "      <th>A001530</th>\n",
-       "      <th>A053210</th>\n",
-       "      <th>A084690</th>\n",
-       "      <th>A042420</th>\n",
-       "      <th>A023530</th>\n",
-       "      <th>A139480</th>\n",
-       "      <th>A000140</th>\n",
-       "      <th>A115160</th>\n",
-       "      <th>A032640</th>\n",
-       "      <th>A020000</th>\n",
-       "      <th>cash</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-11-07</th>\n",
-       "      <td>30</td>\n",
-       "      <td>4</td>\n",
-       "      <td>60</td>\n",
-       "      <td>20</td>\n",
-       "      <td>71</td>\n",
-       "      <td>1</td>\n",
-       "      <td>75</td>\n",
-       "      <td>6</td>\n",
-       "      <td>11</td>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>18</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>25</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            A069640  A030200  A058850  A037560  A900300  A005800  A005390  \\\n",
-       "Unnamed: 0                                                                  \n",
-       "2019-11-07  30       4        60       20       71       1        75        \n",
-       "\n",
-       "            A093050  A005990  A095570  A001530  A053210  A084690  A042420  \\\n",
-       "Unnamed: 0                                                                  \n",
-       "2019-11-07  6        11       29       1        14       18       8         \n",
-       "\n",
-       "            A023530  A139480  A000140  A115160  A032640  A020000  cash  \n",
-       "Unnamed: 0                                                              \n",
-       "2019-11-07  1        1        9        25       9        4        0     "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total_pf_df2.set_index(total_pf_df2.columns[0])"
+    "save_my_portfolio(total_pf_df)"
    ]
   }
  ],
