--- a/neo_backtest_prototype.ipynb
+++ b/neo_backtest_prototype.ipynb
@@ -172,24 +172,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "firm_count = 20\n",
     "max_profit = 0.5\n",
     "max_holding_days=365\n",
     "maximum_rebuy_interval_days = 1\n",
-    "total_pf_df, cache_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
+    "total_pf_df, cache_df, profit_df, not_profit_df = get_portfolio_backtest_df(get_qp_portfolio, start_date, price_df, firm_count, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
     "bt1 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "maximum_rebuy_interval_days = 1\n",
-    "total_pf_df, cache_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
-    "bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "# firm_count = 20\n",
+    "# max_profit = 0.5\n",
+    "# max_holding_days=365\n",
+    "# maximum_rebuy_interval_days = 1\n",
+    "# total_pf_df, cache_df, profit_df, not_profit_df = get_portfolio_backtest_df(get_low_per_portfolio, start_date, price_df, firm_count, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
+    "# bt2 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n",
-    "max_profit = 0.5\n",
-    "max_holding_days=365\n",
-    "maximum_rebuy_interval_days = 1\n",
-    "total_pf_df, cache_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, 20, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
-    "bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
+    "# firm_count = 20\n",
+    "# max_profit = 0.5\n",
+    "# max_holding_days=365\n",
+    "# maximum_rebuy_interval_days = 1\n",
+    "# total_pf_df, cache_df, profit_df, not_profit_df = get_portfolio_backtest_df(get_low_pbr_portfolio, start_date, price_df, firm_count, initial_money, max_profit, max_holding_days, maximum_rebuy_interval_days)\n",
+    "# bt3 = get_backtest_result_from_pf(total_pf_df, price_df)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for index in range(0,10):\n",
+    "#     company_code = profit_df.iloc[index].name\n",
+    "#     buy_date = profit_df.iloc[index].buy_date\n",
+    "#     sell_date = profit_df.iloc[index].sell_date\n",
+    "#     show_buy_sell_date_chart(company_code, buy_date, sell_date, prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for index in range(0,10):\n",
+    "#     company_code = not_profit_df.iloc[index].name\n",
+    "#     buy_date = not_profit_df.iloc[index].buy_date\n",
+    "#     sell_date = not_profit_df.iloc[index].sell_date\n",
+    "#     show_buy_sell_date_chart(company_code, buy_date, sell_date, prices)"
    ]
   },
   {
@@ -201,8 +230,8 @@
     "plt.rc('font', size=10)\n",
     "plt.figure(figsize=(20, 12))\n",
     "plt.plot(bt1.index, bt1['total_change_rate'], label='bt1')\n",
-    "plt.plot(bt2.index, bt2['total_change_rate'], label='bt2')\n",
-    "plt.plot(bt3.index, bt3['total_change_rate'], label='bt3')\n",
+    "# plt.plot(bt2.index, bt2['total_change_rate'], label='bt2')\n",
+    "# plt.plot(bt3.index, bt3['total_change_rate'], label='bt3')\n",
     "plt.plot(my.index, my['total_change_rate'], label='my portfolio')\n",
     "# plt.plot(samsung.index, samsung['total_change_rate'], label='samsung')\n",
     "plt.plot(kospi_df.index, kospi_df['total_change_rate'], label='kospi', color='red',linewidth=0.5, linestyle='dashed')\n",
