--- a/neo_backtest_prototype.ipynb
+++ b/neo_backtest_prototype.ipynb
@@ -201,11 +201,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for index in range(0,10):\n",
-    "#     company_code = profit_df.iloc[index].name\n",
-    "#     buy_date = profit_df.iloc[index].buy_date\n",
-    "#     sell_date = profit_df.iloc[index].sell_date\n",
-    "#     show_buy_sell_date_chart(company_code, buy_date, sell_date, prices)"
+    "# show_count = 20\n",
+    "# iterations = int(len(profit_df)/show_count)\n",
+    "# if len(profit_df) % show_count > 0:\n",
+    "#     iterations = iterations + 1\n",
+    "\n",
+    "# for iteration in range(iterations):\n",
+    "#     start = iteration * show_count\n",
+    "#     end = start + show_count\n",
+    "#     if end > len(profit_df):\n",
+    "#         end = len(profit_df)\n",
+    "#     for index in range(start, end):\n",
+    "#         company_code = profit_df.iloc[index].name\n",
+    "#         buy_date = profit_df.iloc[index].buy_date\n",
+    "#         sell_date = profit_df.iloc[index].sell_date\n",
+    "#         show_buy_sell_date_chart(company_code, buy_date, sell_date, prices)\n",
+    "#         time.sleep(0.1)"
    ]
   },
   {
@@ -214,11 +225,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for index in range(0,10):\n",
-    "#     company_code = not_profit_df.iloc[index].name\n",
-    "#     buy_date = not_profit_df.iloc[index].buy_date\n",
-    "#     sell_date = not_profit_df.iloc[index].sell_date\n",
-    "#     show_buy_sell_date_chart(company_code, buy_date, sell_date, prices)"
+    "# show_count = 20\n",
+    "# iterations = int(len(profit_df)/show_count)\n",
+    "# if len(profit_df) % show_count > 0:\n",
+    "#     iterations = iterations + 1\n",
+    "\n",
+    "# for iteration in range(iterations):\n",
+    "#     start = iteration * show_count\n",
+    "#     end = start + show_count\n",
+    "#     if end > len(profit_df):\n",
+    "#         end = len(profit_df)\n",
+    "#     for index in range(start, end):\n",
+    "#         company_code = not_profit_df.iloc[index].name\n",
+    "#         buy_date = not_profit_df.iloc[index].buy_date\n",
+    "#         sell_date = not_profit_df.iloc[index].sell_date\n",
+    "#         show_buy_sell_date_chart(company_code, buy_date, sell_date, prices)\n",
+    "#         time.sleep(0.1)"
    ]
   },
   {
