--- a/neo_backtest_prototype.ipynb
+++ b/neo_backtest_prototype.ipynb
@@ -226,15 +226,15 @@
    "outputs": [],
    "source": [
     "# show_count = 20\n",
-    "# iterations = int(len(profit_df)/show_count)\n",
-    "# if len(profit_df) % show_count > 0:\n",
+    "# iterations = int(len(not_profit_df)/show_count)\n",
+    "# if len(not_profit_df) % show_count > 0:\n",
     "#     iterations = iterations + 1\n",
     "\n",
     "# for iteration in range(iterations):\n",
     "#     start = iteration * show_count\n",
     "#     end = start + show_count\n",
-    "#     if end > len(profit_df):\n",
-    "#         end = len(profit_df)\n",
+    "#     if end > len(not_profit_df):\n",
+    "#         end = len(not_profit_df)\n",
     "#     for index in range(start, end):\n",
     "#         company_code = not_profit_df.iloc[index].name\n",
     "#         buy_date = not_profit_df.iloc[index].buy_date\n",
