--- a/rim/py_neo_quant_rim_crawling_company.ipynb
+++ b/rim/py_neo_quant_rim_crawling_company.ipynb
@@ -11,28 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "import csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import csv\n",
+    "\n",
     "def request_company_list(kospi = True):\n",
     "    if kospi == True: \n",
     "        marketType = 'stockMkt'\n",
     "    else:\n",
     "        marketType = 'kosdaqMkt'\n",
     "    url = 'http://kind.krx.co.kr/corpgeneral/corpList.do?method=download&searchType=13&marketType=' + marketType\n",
-    "    company = pd.read_html(url, header=0)[0] #dataFrame으로 받는다.\n",
+    "    company = pd.read_html(url, header=0)[0]\n",
     "\n",
     "    company = company[['종목코드', '회사명']]\n",
     "    company = company.rename(columns={\n",
@@ -47,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +516,7 @@
        "[2281 rows x 2 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
