--- a/rim/py_neo_quant_rim_crawling_price.ipynb
+++ b/rim/py_neo_quant_rim_crawling_price.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import requests\n",
     "import bs4\n",
     "\n",
-    "def make_price_dataframe(company_code, timeframe, count):\n",
+    "def request_price_list(company_code, timeframe, count):\n",
     "    request_code = company_code\n",
     "    if request_code.startswith('A'):\n",
     "        request_code = request_code.replace('A','')\n",
@@ -37,14 +37,16 @@
     "        date_list.append(datas[0])\n",
     "        price_list.append(datas[4])\n",
     "\n",
+    "    price_list = pd.to_numeric(price_list)\n",
     "    price_df = pd.DataFrame({company_code:price_list}, index=date_list)\n",
+    "    price_df.index = pd.to_datetime(price_df.index)\n",
     "    \n",
     "    return price_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,123 +85,123 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20200915</th>\n",
+       "      <th>2020-09-15</th>\n",
        "      <td>111500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200916</th>\n",
+       "      <th>2020-09-16</th>\n",
        "      <td>109000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200917</th>\n",
+       "      <th>2020-09-17</th>\n",
        "      <td>108500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200918</th>\n",
+       "      <th>2020-09-18</th>\n",
        "      <td>108500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200921</th>\n",
+       "      <th>2020-09-21</th>\n",
        "      <td>105500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200922</th>\n",
+       "      <th>2020-09-22</th>\n",
        "      <td>101500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200923</th>\n",
+       "      <th>2020-09-23</th>\n",
        "      <td>101000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200924</th>\n",
+       "      <th>2020-09-24</th>\n",
        "      <td>95000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200925</th>\n",
+       "      <th>2020-09-25</th>\n",
        "      <td>94900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200928</th>\n",
+       "      <th>2020-09-28</th>\n",
        "      <td>96400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20200929</th>\n",
+       "      <th>2020-09-29</th>\n",
        "      <td>99500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201005</th>\n",
+       "      <th>2020-10-05</th>\n",
        "      <td>99600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201006</th>\n",
+       "      <th>2020-10-06</th>\n",
        "      <td>100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201007</th>\n",
+       "      <th>2020-10-07</th>\n",
        "      <td>99200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201008</th>\n",
+       "      <th>2020-10-08</th>\n",
        "      <td>100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201012</th>\n",
+       "      <th>2020-10-12</th>\n",
        "      <td>100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201013</th>\n",
+       "      <th>2020-10-13</th>\n",
        "      <td>97900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201014</th>\n",
+       "      <th>2020-10-14</th>\n",
        "      <td>98200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201015</th>\n",
+       "      <th>2020-10-15</th>\n",
        "      <td>96100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201016</th>\n",
+       "      <th>2020-10-16</th>\n",
        "      <td>96800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201019</th>\n",
+       "      <th>2020-10-19</th>\n",
        "      <td>95500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201020</th>\n",
+       "      <th>2020-10-20</th>\n",
        "      <td>96300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201021</th>\n",
+       "      <th>2020-10-21</th>\n",
        "      <td>101500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201022</th>\n",
+       "      <th>2020-10-22</th>\n",
        "      <td>105000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201023</th>\n",
+       "      <th>2020-10-23</th>\n",
        "      <td>108000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201026</th>\n",
+       "      <th>2020-10-26</th>\n",
        "      <td>104500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201027</th>\n",
+       "      <th>2020-10-27</th>\n",
        "      <td>103500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201028</th>\n",
+       "      <th>2020-10-28</th>\n",
        "      <td>107500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201029</th>\n",
+       "      <th>2020-10-29</th>\n",
        "      <td>105500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201030</th>\n",
+       "      <th>2020-10-30</th>\n",
        "      <td>103000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -207,124 +209,124 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201229</th>\n",
+       "      <th>2020-12-29</th>\n",
        "      <td>124000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20201230</th>\n",
+       "      <th>2020-12-30</th>\n",
        "      <td>126500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210104</th>\n",
+       "      <th>2021-01-04</th>\n",
        "      <td>134500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210105</th>\n",
+       "      <th>2021-01-05</th>\n",
        "      <td>134500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210106</th>\n",
+       "      <th>2021-01-06</th>\n",
        "      <td>142000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210107</th>\n",
+       "      <th>2021-01-07</th>\n",
        "      <td>147500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210108</th>\n",
+       "      <th>2021-01-08</th>\n",
        "      <td>152000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210111</th>\n",
+       "      <th>2021-01-11</th>\n",
        "      <td>162000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210112</th>\n",
+       "      <th>2021-01-12</th>\n",
        "      <td>155500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210113</th>\n",
+       "      <th>2021-01-13</th>\n",
        "      <td>153000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210114</th>\n",
+       "      <th>2021-01-14</th>\n",
        "      <td>153000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210115</th>\n",
+       "      <th>2021-01-15</th>\n",
        "      <td>147000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210118</th>\n",
+       "      <th>2021-01-18</th>\n",
        "      <td>141000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210119</th>\n",
+       "      <th>2021-01-19</th>\n",
        "      <td>149000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210120</th>\n",
+       "      <th>2021-01-20</th>\n",
        "      <td>149000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210121</th>\n",
+       "      <th>2021-01-21</th>\n",
        "      <td>151500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210122</th>\n",
+       "      <th>2021-01-22</th>\n",
        "      <td>142000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210125</th>\n",
+       "      <th>2021-01-25</th>\n",
        "      <td>145000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210126</th>\n",
+       "      <th>2021-01-26</th>\n",
        "      <td>148000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210127</th>\n",
+       "      <th>2021-01-27</th>\n",
        "      <td>150500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210128</th>\n",
+       "      <th>2021-01-28</th>\n",
        "      <td>146500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210129</th>\n",
+       "      <th>2021-01-29</th>\n",
        "      <td>141000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210201</th>\n",
+       "      <th>2021-02-01</th>\n",
        "      <td>145500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210202</th>\n",
+       "      <th>2021-02-02</th>\n",
        "      <td>148000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210203</th>\n",
+       "      <th>2021-02-03</th>\n",
        "      <td>152000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210204</th>\n",
+       "      <th>2021-02-04</th>\n",
        "      <td>149500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210205</th>\n",
+       "      <th>2021-02-05</th>\n",
        "      <td>149000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210208</th>\n",
+       "      <th>2021-02-08</th>\n",
        "      <td>155000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210209</th>\n",
+       "      <th>2021-02-09</th>\n",
        "      <td>157500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20210210</th>\n",
-       "      <td>149500</td>\n",
+       "      <th>2021-02-10</th>\n",
+       "      <td>150000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -332,73 +334,73 @@
        "</div>"
       ],
       "text/plain": [
-       "         A039490\n",
-       "20200915  111500\n",
-       "20200916  109000\n",
-       "20200917  108500\n",
-       "20200918  108500\n",
-       "20200921  105500\n",
-       "20200922  101500\n",
-       "20200923  101000\n",
-       "20200924   95000\n",
-       "20200925   94900\n",
-       "20200928   96400\n",
-       "20200929   99500\n",
-       "20201005   99600\n",
-       "20201006  100000\n",
-       "20201007   99200\n",
-       "20201008  100000\n",
-       "20201012  100000\n",
-       "20201013   97900\n",
-       "20201014   98200\n",
-       "20201015   96100\n",
-       "20201016   96800\n",
-       "20201019   95500\n",
-       "20201020   96300\n",
-       "20201021  101500\n",
-       "20201022  105000\n",
-       "20201023  108000\n",
-       "20201026  104500\n",
-       "20201027  103500\n",
-       "20201028  107500\n",
-       "20201029  105500\n",
-       "20201030  103000\n",
-       "...          ...\n",
-       "20201229  124000\n",
-       "20201230  126500\n",
-       "20210104  134500\n",
-       "20210105  134500\n",
-       "20210106  142000\n",
-       "20210107  147500\n",
-       "20210108  152000\n",
-       "20210111  162000\n",
-       "20210112  155500\n",
-       "20210113  153000\n",
-       "20210114  153000\n",
-       "20210115  147000\n",
-       "20210118  141000\n",
-       "20210119  149000\n",
-       "20210120  149000\n",
-       "20210121  151500\n",
-       "20210122  142000\n",
-       "20210125  145000\n",
-       "20210126  148000\n",
-       "20210127  150500\n",
-       "20210128  146500\n",
-       "20210129  141000\n",
-       "20210201  145500\n",
-       "20210202  148000\n",
-       "20210203  152000\n",
-       "20210204  149500\n",
-       "20210205  149000\n",
-       "20210208  155000\n",
-       "20210209  157500\n",
-       "20210210  149500\n",
+       "           A039490\n",
+       "2020-09-15  111500\n",
+       "2020-09-16  109000\n",
+       "2020-09-17  108500\n",
+       "2020-09-18  108500\n",
+       "2020-09-21  105500\n",
+       "2020-09-22  101500\n",
+       "2020-09-23  101000\n",
+       "2020-09-24   95000\n",
+       "2020-09-25   94900\n",
+       "2020-09-28   96400\n",
+       "2020-09-29   99500\n",
+       "2020-10-05   99600\n",
+       "2020-10-06  100000\n",
+       "2020-10-07   99200\n",
+       "2020-10-08  100000\n",
+       "2020-10-12  100000\n",
+       "2020-10-13   97900\n",
+       "2020-10-14   98200\n",
+       "2020-10-15   96100\n",
+       "2020-10-16   96800\n",
+       "2020-10-19   95500\n",
+       "2020-10-20   96300\n",
+       "2020-10-21  101500\n",
+       "2020-10-22  105000\n",
+       "2020-10-23  108000\n",
+       "2020-10-26  104500\n",
+       "2020-10-27  103500\n",
+       "2020-10-28  107500\n",
+       "2020-10-29  105500\n",
+       "2020-10-30  103000\n",
+       "...            ...\n",
+       "2020-12-29  124000\n",
+       "2020-12-30  126500\n",
+       "2021-01-04  134500\n",
+       "2021-01-05  134500\n",
+       "2021-01-06  142000\n",
+       "2021-01-07  147500\n",
+       "2021-01-08  152000\n",
+       "2021-01-11  162000\n",
+       "2021-01-12  155500\n",
+       "2021-01-13  153000\n",
+       "2021-01-14  153000\n",
+       "2021-01-15  147000\n",
+       "2021-01-18  141000\n",
+       "2021-01-19  149000\n",
+       "2021-01-20  149000\n",
+       "2021-01-21  151500\n",
+       "2021-01-22  142000\n",
+       "2021-01-25  145000\n",
+       "2021-01-26  148000\n",
+       "2021-01-27  150500\n",
+       "2021-01-28  146500\n",
+       "2021-01-29  141000\n",
+       "2021-02-01  145500\n",
+       "2021-02-02  148000\n",
+       "2021-02-03  152000\n",
+       "2021-02-04  149500\n",
+       "2021-02-05  149000\n",
+       "2021-02-08  155000\n",
+       "2021-02-09  157500\n",
+       "2021-02-10  150000\n",
        "\n",
        "[100 rows x 1 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
