--- a/rim/py_neo_quant_rim_adequate_price.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !open ."
+    "!open ."
    ]
   },
   {
@@ -249,15 +249,8 @@
     "    price_df['price_high'] = [price_high] * len(price_df)\n",
     "    \n",
     "    show_price_chart(company_code, company_name, price_df)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
+    "\n",
     "def show_more_adequate_price_chart(company_name, companies):\n",
     "    company_code = get_company_code(company_name, companies)\n",
     "    print('company name : ' + company_name)\n",
