--- a/rim/py_neo_quant_rim_construct_screening.ipynb
+++ b/rim/py_neo_quant_rim_construct_screening.ipynb
@@ -237,6 +237,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 수익률 계산 시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import bs4\n",
+    "import math\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import font_manager, rc\n",
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "rc('font', family='AppleGothic')\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "import NeoQuant as nq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get all company list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies = nq.get_all_company_list()\n",
+    "companies.index = 'A' + companies.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sector_df = pd.read_excel(r'data/construct_sector.xlsx')\n",
     "sector_df.index = sector_df[sector_df.columns[0]]\n",
@@ -253,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +321,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 / 38 : KD (A044180)\n",
+      "2 / 38 : DL (A000210)\n",
+      "3 / 38 : HDC (A012630)\n",
+      "4 / 38 : 한신공영 (A004960)\n",
+      "5 / 38 : 태영건설 (A009410)\n",
+      "6 / 38 : 계룡건설산업 (A013580)\n",
+      "7 / 38 : 화성산업 (A002460)\n",
+      "8 / 38 : KCC건설 (A021320)\n",
+      "9 / 38 : 삼호개발 (A010960)\n",
+      "10 / 38 : 신원종합개발 (A017000)\n",
+      "11 / 38 : 동원개발 (A013120)\n",
+      "12 / 38 : 동부건설 (A005960)\n",
+      "13 / 38 : HDC현대산업개발 (A294870)\n",
+      "14 / 38 : 서한 (A011370)\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
