--- a/rim/py_neo_quant_rim_s_rim_screening.ipynb
+++ b/rim/py_neo_quant_rim_s_rim_screening.ipynb
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "port_df.to_excel(r'data/s_rim_sector.xlsx')"
+    "port_df.to_excel(r'data/s_rim_sector_profit.xlsx')"
    ]
   },
   {
