--- a/rim/py_neo_quant_rim_stock_screening.ipynb
+++ b/rim/py_neo_quant_rim_stock_screening.ipynb
@@ -227,6 +227,84 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 수익률 계산 시"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import bs4\n",
+    "import math\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import font_manager, rc\n",
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "rc('font', family='AppleGothic')\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "import NeoQuant as nq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get all company list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies = nq.get_all_company_list()\n",
+    "companies.index = 'A' + companies.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sector_df = pd.read_excel(r'data/stock_sector.xlsx')\n",
     "sector_df.index = sector_df[sector_df.columns[0]]\n",
