--- a/rim/py_neo_quant_rim_fnguide_test.ipynb
+++ b/rim/py_neo_quant_rim_fnguide_test.ipynb
@@ -15,22 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# firm_name = '서희건설'\n",
-    "firm_name = '키움증권'\n",
-    "# firm_name = '한국자산신탁'\n",
-    "# firm_name = '유진증권'\n",
-    "# firm_name = '메리츠증권'\n",
-    "# firm_name = '메리츠화재'\n",
-    "# firm_name = '삼성전자'\n",
-    "# firm_name = '코미코'\n",
-    "# firm_name = '현대건설'\n",
-    "# firm_name = 'GS건설'\n",
-    "# firm_name = '동원개발' \n",
-    "# firm_name = 'HDC현대산업개발'\n",
-    "# firm_name = '삼성증권'\n",
-    "# firm_name = '이베스트투자증권'\n",
-    "# firm_name = '미래에셋대우'\n",
-    "# firm_name = 'DL이앤씨'"
+    "firm_name = 'POSCO'"
    ]
   },
   {
